# Chat_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini.example  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: main.yml
app/: main.py
app/core/: config.py  exceptions.py
app/dependencies/: auth.py
app/internal/: chats.py  crud.py
app/models/: __init__.py  core.py  general.py
app/routes/: auth.py  chat.py  exceptions.py  users.py
app/schemas/: auth.py  chat.py  core.py  shared.py  users.py
app/utils/: database.py  json_serialization.py  utils.py
app/utils/auth/: jwt_generator.py  token_schemas.py
migrations/: env.py
migrations/versions/: 2026_04_22_1452_f713cca7ad47_create_user.py  2026_04_23_1546_0818ae2355d4_add_chat.py
scripts/: run_migrations_from_container.sh
